--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@earnkeeper/ekp-sdk-nestjs",
-  "version": "0.1.0",
+  "version": "0.1.3",
   "description": "The Nest.js software development kit for EarnKeeper.io plugins",
   "homepage": "https://github.com/earnkeeper/ekp-sdk-nestjs#readme",
   "repository": {
@@ -52,7 +52,7 @@
     "mongoose": "^6.1.2",
     "moralis": "0.0.184",
     "morphism": "^1.12.3",
-    "nestjs-redis": "git+https://github.com/skunight/nestjs-redis.git",
+    "nestjs-redis": "git+https://github.com/skunight/nestjs-redis.git#master",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
