--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@earnkeeper/ekp-sdk-nestjs",
-  "version": "0.1.5",
+  "version": "0.1.7",
   "description": "The Nest.js software development kit for EarnKeeper.io plugins",
   "homepage": "https://github.com/earnkeeper/ekp-sdk-nestjs#readme",
   "repository": {
@@ -20,7 +20,8 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "test:e2e": "jest --config ./test/jest-e2e.json --watch"
   },
   "dependencies": {
     "@earnkeeper/ekp-ui": "^0.1.1",
