--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@nestjs/platform-socket.io": "^8.2.0",
     "@nestjs/typeorm": "^8.0.2",
     "@nestjs/websockets": "^8.2.0",
+    "@sentry/node": "^6.17.4",
+    "@sentry/tracing": "^6.17.4",
     "@types/cache-manager-redis-store": "^2.0.1",
     "async-retry": "^1.3.3",
     "axios": "^0.24.0",
