--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json --watch"
   },
   "dependencies": {
-    "@earnkeeper/ekp-ui": "^0.1.3",
+    "@earnkeeper/ekp-sdk": "file:.yalc/@earnkeeper/ekp-sdk",
     "@nestjs/bull": "^0.4.2",
     "@nestjs/common": "^8.2.5",
     "@nestjs/config": "^1.1.6",
@@ -42,22 +42,15 @@
     "axios": "^0.24.0",
     "bottleneck": "^2.19.5",
     "bull": "^3.29.3",
-    "bycontract": "^2.0.11",
     "cache-manager": "^3.6.0",
     "cache-manager-redis-store": "^2.0.0",
     "dotenv": "^10.0.0",
-    "ethers": "^5.5.1",
-    "lodash": "^4.17.21",
-    "moment": "^2.29.1",
     "mongoose": "^6.1.2",
     "moralis": "1.2.6",
     "nestjs-redis": "git+https://github.com/earnkeeper/nestjs-redis#f699937",
-    "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
     "rxjs": "^7.4.0",
     "threads": "^1.7.0",
-    "ts-node": "^10.0.0",
     "typeorm": "^0.2.40",
     "winston": "^3.3.3"
   },
@@ -80,6 +73,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "jest": "^27.0.6",
     "prettier": "^2.3.2",
+    "rimraf": "^3.0.2",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
     "ts-loader": "^9.2.3",
